--- a/cdc-mysql-firstclassconnector/pom.xml
+++ b/cdc-mysql-firstclassconnector/pom.xml
@@ -6,6 +6,7 @@
    <groupId>enginerds</groupId>
    <artifactId>enginerds-hazelcast-cdc-mysql-firstclassconnector</artifactId>
    <version>1.0-SNAPSHOT</version>
+   <name>cdc-mysql-firstclassconnector</name>
 
    <properties>
        <maven.compiler.target>1.8</maven.compiler.target>
